--- a/css/styles.css
+++ b/css/styles.css
@@ -98,3 +98,10 @@
     max-width: 500px;
     margin: 0;
 }
+
+/* MOBILE */
+@media(max-width: 480px) {
+    #home-link {
+        display: none;
+    }
+}
